base-process/src/main/kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kogito-istio-v1
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: kogito-istio
        version: v1
    spec:
      containers:
      - name: kogito-istio-v1
        image: quay.io/gbaufake/kogito-istio:v1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
